[gd_scene load_steps=8 format=2]

[ext_resource path="res://ui/ui.gd" type="Script" id=1]
[ext_resource path="res://ui/images/progress_bar_under.png" type="Texture" id=2]
[ext_resource path="res://ui/images/progress_bar_over.png" type="Texture" id=3]
[ext_resource path="res://ui/images/progress_bar_progress_brake.png" type="Texture" id=4]
[ext_resource path="res://ui/images/progress_bar_progress_throttle.png" type="Texture" id=5]
[ext_resource path="res://ui/images/progress_bar_progress_turn.png" type="Texture" id=6]
[ext_resource path="res://ui/images/car_icon.png" type="Texture" id=7]

[node name="UI_Root" type="Control"]
margin_left = 132.0
margin_top = 44.0
margin_right = 175.0
margin_bottom = 82.0
script = ExtResource( 1 )

[node name="vbox_input" type="VBoxContainer" parent="."]
editor/display_folded = true
margin_left = -122.0
margin_top = -32.0
margin_right = 98.0
margin_bottom = 29.0

[node name="hbox" type="HBoxContainer" parent="vbox_input"]
margin_right = 220.0
margin_bottom = 14.0

[node name="text_brake" type="Label" parent="vbox_input/hbox"]
margin_right = 50.58
margin_bottom = 14.0
rect_min_size = Vector2( 50.58, 0 )
size_flags_vertical = 1
text = "Brake"
valign = 1

[node name="progress_brake" type="TextureProgress" parent="vbox_input/hbox"]
margin_left = 54.0
margin_right = 220.0
margin_bottom = 14.0
size_flags_horizontal = 3
texture_under = ExtResource( 2 )
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 4 )
nine_patch_stretch = true
stretch_margin_left = 1
stretch_margin_top = 2
stretch_margin_right = 1
stretch_margin_bottom = 2

[node name="hbox2" type="HBoxContainer" parent="vbox_input"]
margin_top = 18.0
margin_right = 220.0
margin_bottom = 32.0

[node name="text_throttle" type="Label" parent="vbox_input/hbox2"]
margin_right = 50.0
margin_bottom = 14.0
rect_min_size = Vector2( 30, 0 )
size_flags_vertical = 1
text = "Throttle"
valign = 1

[node name="progress_throttle" type="TextureProgress" parent="vbox_input/hbox2"]
margin_left = 54.0
margin_right = 220.0
margin_bottom = 14.0
size_flags_horizontal = 3
texture_under = ExtResource( 2 )
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 5 )
nine_patch_stretch = true
stretch_margin_left = 1
stretch_margin_top = 2
stretch_margin_right = 1
stretch_margin_bottom = 2

[node name="hbox3" type="HBoxContainer" parent="vbox_input"]
margin_top = 36.0
margin_right = 220.0
margin_bottom = 50.0

[node name="text_turn" type="Label" parent="vbox_input/hbox3"]
margin_right = 50.29
margin_bottom = 14.0
rect_min_size = Vector2( 50.29, 0 )
size_flags_vertical = 1
text = "Turn"
valign = 1

[node name="progress_turn" type="TextureProgress" parent="vbox_input/hbox3"]
margin_left = 54.0
margin_right = 220.0
margin_bottom = 14.0
size_flags_horizontal = 3
texture_under = ExtResource( 2 )
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 6 )
nine_patch_stretch = true
stretch_margin_left = 1
stretch_margin_top = 2
stretch_margin_right = 1
stretch_margin_bottom = 2

[node name="hbox_stats" type="HBoxContainer" parent="."]
editor/display_folded = true
margin_left = 683.0
margin_top = -34.0
margin_right = 883.0
margin_bottom = 161.0

[node name="vbox_labels" type="VBoxContainer" parent="hbox_stats"]
margin_right = 51.0
margin_bottom = 195.0

[node name="traction" type="Label" parent="hbox_stats/vbox_labels"]
margin_right = 51.0
margin_bottom = 14.0
text = "Traction"

[node name="drag" type="Label" parent="hbox_stats/vbox_labels"]
margin_top = 18.0
margin_right = 51.0
margin_bottom = 32.0
text = "Drag"

[node name="friction" type="Label" parent="hbox_stats/vbox_labels"]
margin_top = 36.0
margin_right = 51.0
margin_bottom = 50.0
text = "Friction"

[node name="split_1" type="Label" parent="hbox_stats/vbox_labels"]
margin_top = 54.0
margin_right = 51.0
margin_bottom = 68.0

[node name="speed" type="Label" parent="hbox_stats/vbox_labels"]
margin_top = 72.0
margin_right = 51.0
margin_bottom = 86.0
text = "Speed"

[node name="acc" type="Label" parent="hbox_stats/vbox_labels"]
margin_top = 90.0
margin_right = 51.0
margin_bottom = 104.0
text = "Accel."

[node name="engforce" type="Label" parent="hbox_stats/vbox_labels"]
margin_top = 108.0
margin_right = 51.0
margin_bottom = 122.0
text = "E. Force"

[node name="vbox_data" type="VBoxContainer" parent="hbox_stats"]
margin_left = 55.0
margin_right = 60.0
margin_bottom = 195.0

[node name="traction_vect" type="Label" parent="hbox_stats/vbox_data"]
margin_right = 5.0
margin_bottom = 14.0
text = "-"

[node name="drag_vect" type="Label" parent="hbox_stats/vbox_data"]
margin_top = 18.0
margin_right = 5.0
margin_bottom = 32.0
text = "-"

[node name="friction_vect" type="Label" parent="hbox_stats/vbox_data"]
margin_top = 36.0
margin_right = 5.0
margin_bottom = 50.0
text = "-"

[node name="split_1" type="Label" parent="hbox_stats/vbox_data"]
margin_top = 54.0
margin_right = 5.0
margin_bottom = 68.0

[node name="speed" type="Label" parent="hbox_stats/vbox_data"]
margin_top = 72.0
margin_right = 5.0
margin_bottom = 86.0
text = "-"

[node name="acc" type="Label" parent="hbox_stats/vbox_data"]
margin_top = 90.0
margin_right = 5.0
margin_bottom = 104.0
text = "-"

[node name="engforce" type="Label" parent="hbox_stats/vbox_data"]
margin_top = 108.0
margin_right = 5.0
margin_bottom = 122.0
text = "-"

[node name="car_icon" type="Sprite" parent="."]
position = Vector2( -11.444, 72.1208 )
scale = Vector2( 0.17991, 0.191899 )
texture = ExtResource( 7 )

[node name="cm_rear" type="TextureProgress" parent="."]
margin_left = -77.9474
margin_top = 95.5263
margin_right = -24.9474
margin_bottom = 109.526
rect_rotation = -90.0
size_flags_horizontal = 3
texture_under = ExtResource( 2 )
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 6 )
nine_patch_stretch = true
stretch_margin_left = 1
stretch_margin_top = 2
stretch_margin_right = 1
stretch_margin_bottom = 2

[node name="cm_front" type="TextureProgress" parent="."]
margin_left = 41.0
margin_top = 95.5263
margin_right = 94.0
margin_bottom = 109.526
rect_rotation = -90.0
size_flags_horizontal = 3
texture_under = ExtResource( 2 )
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 6 )
nine_patch_stretch = true
stretch_margin_left = 1
stretch_margin_top = 2
stretch_margin_right = 1
stretch_margin_bottom = 2

[node name="cm_rear_num" type="Label" parent="."]
margin_left = -98.0526
margin_top = 100.0
margin_right = -48.0526
margin_bottom = 131.0
text = "0000
Nm"
align = 1

[node name="cm_front_num" type="Label" parent="."]
margin_left = 21.6316
margin_top = 103.053
margin_right = 74.6316
margin_bottom = 134.053
text = "0000
Nm"
align = 1

